--- a/package.json
+++ b/package.json
@@ -25,12 +25,9 @@
     "commitlint": "npx commitlint --edit $1"
   },
   "devDependencies": {
-    "commitlint": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
     "remark-cli": "12.0.1",
     "remark-frontmatter": "5.0.0",
-    "remark-gfm": "4.0.1",
-    "remark-github": "12.0.0",
-    "remark-lint-no-unneeded-full-reference-link": "4.0.1"
+    "remark-preset-github": "4.0.4"
   }
 }
