docs(readme): Update README with shoutouts and project status
- add shoutouts section to acknowledge early contributors
- enhance project status description
- update formatting for clarity
- change header from "✨" to "🌈" for consistency

Commit-generated-by: GitHub Copilot <copilot@github.com>
Signed-off-by: Ashley Childress <6563688+anchildress1@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "check": "npx remark . -f -q",
     "format": "npx remark . -o",
-    "commitlint": "npx commitlint --edit $1"
+    "commitlint": "npx commitlint --verbose --edit"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "19.8.1",
