--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "19.8.1",
+    "lefthook": "1.12.2",
     "remark-cli": "12.0.1",
     "remark-frontmatter": "5.0.0",
     "remark-preset-github": "4.0.4"
