--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,5 +1,3 @@
-# Remark has an issue with formatting some GFM correctly,
-# so I've commented out `git add` until resolved.
  pre-commit:
   parallel: true
   commands:
@@ -7,7 +5,7 @@
       run: |
         STAGED_FILES=$(git diff --cached --name-only)
         npm run format
-        # echo "$STAGED_FILES" | xargs git add
+        echo "$STAGED_FILES" | xargs git add
 
 commit-msg:
   parallel: true
