docs(instructions): Add analyze-git-diff and update commit instructions
- add `.github/instructions/analyze-git-diff.instructions.md` with diff analysis workflow
- update `instructions/README.md` to include new instruction and refine existing content
- update `README.md` to document analyze-git-diff section and links
- rename `generate-commit-message` to `format-conventional-commit` for clarity
- fix lefthook configuration to handle staged files correctly

Co-authored-by: GitHub Copilot <github.copilot@github.com>
Signed-off-by: Ashley Childress <6563688+anchildress1@users.noreply.github.com>

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,11 +1,13 @@
- pre-commit:
+pre-commit:
   parallel: true
   commands:
     format:
       run: |
-        STAGED_FILES=$(git diff --cached --name-only)
-        npm run format
-        echo "$STAGED_FILES" | xargs git add
+        STAGED_FILES=$(git diff --cached --name-only --diff-filter=ACM)
+        if [ -n "$STAGED_FILES" ]; then
+          echo "$STAGED_FILES" | xargs -r npm run format
+          echo "$STAGED_FILES" | xargs -r git add
+        fi
 
 commit-msg:
   parallel: true
