--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-node_modules/
+node_modules
 .DS_Store
 .vscode/
+!.vscode/tasks.json*
+!.vscode/settings.json*
+!.vscode/extensions.json*
 *.tmp
 *.log
 *.txt
