docs(readme): Migrate and consolidate documentation structure
- add .github/README.md with unified docs structure for instructions, prompts, and chat modes
- add awesome-github-copilot-colors.png image asset
- add generate-commit-message.md and get-current-timestamp.md with detailed prompt documentation
- update package-lock.json to include @commitlint/cli and related dependencies
- delete chatmodes/README.md, instructions/README.md, and prompts/README.md (content moved)

Co-authored-by: GitHub Copilot <github.copilot@github.com>
Signed-off-by: Ashley Childress <6563688+anchildress1@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "commitlint": "npx commitlint --verbose --edit"
   },
   "devDependencies": {
+    "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
     "glob": "11.0.3",
     "ignore": "7.0.5",
