--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "awesome-github-copilot",
   "version": "0.0.0",
-  "license": "Apache-2.0",
+  "license": "",
   "author": "Ashley Childress",
   "description": "🚧 WIP: My AI prompts, chat modes & instructions - curated by me (and ChatGPT). Updates often!",
   "keywords": [
