chore(prompts): Add commit safety rule and update docs
 - Insert CRITICAL SAFETY rule in `.github/prompts/generate-commit-message.prompt.md`
 - Update `CONTRIBUTING.md` and `DEVELOPMENT.md` for process and links
 - Update `package.json` license to MIT; remove `package-lock.json` as staged

Co-authored-by: GitHub Copilot <github.copilot@github.com>
Signed-off-by: Ashley Childress <6563688+anchildress1@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "awesome-github-copilot",
   "version": "0.0.0",
-  "license": "",
+  "license": "MIT",
   "author": "Ashley Childress",
   "description": "🚧 WIP: My AI prompts, chat modes & instructions - curated by me (and ChatGPT). Updates often!",
   "keywords": [
@@ -20,7 +20,7 @@
   },
   "type": "module",
   "scripts": {
-    "check": "npx remark . -f -q",
+    "lint": "npx remark . -f -q",
     "format": "npx remark . -o && node scripts/fix-github-alerts.js",
     "commitlint": "npx commitlint --verbose --edit"
   },
