refactor(prompts): Fix tool and attribution calculation for commits
- Remove missing tool in latest set changes
- Ensure attribution is calculated as a guestimate only based on files changed and context
- Updated docs for commit prompt to match changes
- Promoted commit prompt to check status

Co-authored-by: GitHub Copilot <github.copilot@github.com>
Signed-off-by: Ashley Childress <6563688+anchildress1@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "format": "npx remark . -o && node scripts/fix-github-alerts.js",
     "commitlint": "npx commitlint --verbose --edit"
   },
+  "volta": {
+    "node": "25.1.0"
+  },
+  "engines": {
+    "node": "25.x.x"
+  },
   "devDependencies": {
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
