chore(tooling): protect markdown admonitions/placeholders
 - Add `scripts/protect-md.js` to insert invisible protections before formatting
 - Integrate protection into `npm run format` to run before remark
 - Restore `.remarkrc.js` to avoid incompatible plugin changes
 - Prevent remark from reflowing or escaping admonitions/placeholders across upgrades
 - Add instructions to commit prompt and this repo to avoid git commit or add commands

Co-authored-by: GitHub Copilot <github.copilot@github.com>
Signed-off-by: Ashley Childress <6563688+anchildress1@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "awesome",
     "instructions",
     "prompts",
+    "agents",
     "chatmodes",
+    "workflows",
+    "github-actions",
+    "agentics",
     "ai"
   ],
   "homepage": "https://github.com/anchildress1/awesome-github-copilot#readme",
