docs: clarify repo purpose and redirect contributors upstream
 - Update CONTRIBUTING.md to clearly redirect to github/awesome-copilot
 - Refine README and docs to emphasize this is a personal playground/staging area
 - Polish tone and messaging to reflect experimental nature of the repo

Commit-generated-by: GitHub Copilot <github.copilot@github.com>
Signed-off-by: Ashley Childress <6563688+anchildress1@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "author": "Ashley Childress",
-  "description": "🚧 WIP: My AI prompts, chat modes & instructions - curated by me (and ChatGPT). Updates often!",
+  "description": "My AI prompts, custom agents & instructions - curated by me (and ChatGPT). Updates often-ish (considering)!",
   "keywords": [
     "github",
     "copilot",
