chore: rehome prompts and docs
- move agent, prompt, and instruction files out of .github into repo directories
- add dedicated commit message prompt/docs and remove legacy copies
- mark package private, align Node 24 engines, refresh lockfile metadata

Commit-generated-by: GitHub Copilot <github.copilot@github.com>
Signed-off-by: Ashley Childress <6563688+anchildress1@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "awesome-github-copilot",
-  "version": "0.0.0",
+  "private": true,
   "license": "MIT",
   "author": "Ashley Childress",
   "description": "My AI prompts, custom agents & instructions - curated by me (and ChatGPT). Updates often-ish (considering)!",
@@ -32,7 +32,7 @@
     "node": "24.12.0"
   },
   "engines": {
-    "node": "25.x.x"
+    "node": "24.x"
   },
   "devDependencies": {
     "@commitlint/cli": "19.8.1",
